--- a/fcc/markdownPreview/styles/scss/_MarkdownPreviewContainer.scss
+++ b/fcc/markdownPreview/styles/scss/_MarkdownPreviewContainer.scss
@@ -1,3 +1,8 @@
 .container#preview {
     white-space: pre-line;
+
+    ol, ul, blockquote {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
 }
